refact: refact style

--- a/src/assets/css/layout/grid/_variable.less
+++ b/src/assets/css/layout/grid/_variable.less
@@ -18,4 +18,5 @@
 @screen-lg-max          : (@screen-lg-min - 1);
 
 @grid-columns           : 24;
-@grid-gutter-width      : 0;
+@grid-gutter-width      : 24px;
+@grid-margin            : 24px;
