--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -1,6 +1,7 @@
 @import './variable/size.less';
 @import './variable/color.less';
 @import './base/icon.less';
-
 @import './base/native.less';
 @import './layout/grid/grid.less';
+@import './drawer/drawer.less';
+@import './bar/bar.less';
