feat: add bar icon

--- a/src/assets/css/bar/bar.less
+++ b/src/assets/css/bar/bar.less
@@ -6,6 +6,7 @@
     z-index: 2020;
     &-content{
         height: 24px;
-        bottom: 20px;
+        margin-top: 16px;
+        margin-left: 16px;
     }
 }
