--- a/src/assets/css/bar/bar.less
+++ b/src/assets/css/bar/bar.less
@@ -3,10 +3,11 @@
     top: 0;
     height:56px;
     width: 100%;
-    z-index: 2020;
+    // z-index: 90;
     &-content{
         height: 24px;
         margin-top: 16px;
         margin-left: 16px;
+        vertical-align: middle;
     }
 }
